src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/AMDStencilOperationExtended_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/AMDStencilOperationExtended_StringErrorContext.class */
public final class AMDStencilOperationExtended_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glStencilOpValueAMD(II)V", "net/labymod/core/laby3d/opengl/error/generated/AMDStencilOperationExtendedErrorContext");
        return methods;
    }
}
